Refactored AIQuestions
- Moved abnormal immunity checks like isBoss() to NpcAI to enable easy overrides
- Removed DESTINATION_REACHED from AIQuestion and implemented it as AI method
- Added support to override abnormal resistance in npc_template.xml